# crewai_manager

./: .env.example  LICENSE  README.md  pyproject.toml
