[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Vincent Lordier <vlordier@users.noreply.github.com>"]
description = "Create agents and tasks configs from prompts"
name = "crewai-manager"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
crewai = "^0.28.8"
python = ">=3.10,<=3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.0"
vale = "^3.4.1.0"
